# scantde

./: .gitignore  LICENSE  README.md  app.wsgi  env.example  pyproject.toml
scantde/: __init__.py  __main__.py  errors.py  io.py  paths.py
scantde/candidates/: __init__.py  ztf.py
scantde/database/: __init__.py  create.py  export.py  search.py
scantde/database/models/: __init__.py  _night.py  _source.py
scantde/html/: cutout.py  extinction.py  generate.py  header.py  host.py  links.py  make_html.py  single.py
scantde/htmlutils/: cutout.py  extinction.py  generate.py  header.py  host.py  links.py  make_html.py  single.py
scantde/log/: __init__.py  export.py  load.py  merge.py  model.py  update.py
scantde/selections/nohostinfo/: apply.py  classifiers.py  run.py
scantde/selections/offnuclear/: apply.py
scantde/selections/tdescore/: apply.py  archive.py  classifiers.py  io.py  make_html.py  plot.py  publish.py  run.py  samples.py
scantde/selections/utils/: algorithmic_cuts.py  apply_full.py  apply_infant.py  apply_lightcurve.py  apply_thermal.py  classifiers.py  crossmatch.py  download.py  export.py  extinction.py  relabel.py  tag_dwarf.py  tag_junk.py
scantde/server/: __init__.py  __main__.py  by_date.py  by_name.py  index.py  login.py  run.py  search.py
scantde/utils/: __init__.py  cutouts.py  html.py  plot.py  slack.py  sync.py  tns.py  utils.py
scantde/utils/skyportal/: __init__.py  client.py  download.py  export.py
